refactor: 替换过时的API调用并优化代码
- 使用Integer.valueOf/Double.valueOf替代new Integer/new Double
- 使用ProcessBuilder替代Runtime.getRuntime().exec
- 使用URI.create().toURL()替代new URL
- 使用InputEvent.CTRL_DOWN_MASK替代InputEvent.CTRL_MASK
- 使用标准Locale常量替代new Locale
- 删除未使用的import java.awt.Color